# swagger/paths/weeks/get.yaml
@@ -1,76 +1,73 @@
-paths:
-  /api/weeks/{week}:
-    get:
-      tags:
-        - Weeks
-      summary: Get baby development data by week
-      description: |
-        Приватний ендпоінт для отримання даних про розвиток малюка відповідно до тижня.
-        Вимагає авторизації через Bearer Token (JWT).
-      security:
-        - bearerAuth: []
-      parameters:
-        - in: path
-          name: week
-          required: true
-          schema:
-            type: integer
-            minimum: 1
-            maximum: 42
-          description: Номер тижня (1–42)
-      responses:
-        '200':
-          description: Baby development data fetched successfully
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  status:
-                    type: integer
-                    example: 200
-                  message:
+tags:
+  - Weeks
+summary: Get baby  data by week c
+description: |
+  Приватний ендпоінт для отримання даних про розвиток малюка відповідно до тижня.
+  Вимагає авторизації через Bearer Token (JWT).
+security:
+  - bearerAuth: []
+parameters:
+  - in: path
+    name: week
+    required: true
+    schema:
+      type: integer
+      minimum: 1
+      maximum: 42
+    description: Номер тижня (1–42)
+responses:
+  '200':
+    description: Baby development data fetched successfully
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            status:
+              type: integer
+              example: 200
+            message:
+              type: string
+              example: Successfully fetched baby development data for week 2
+            data:
+              type: object
+              properties:
+                weekNumber:
+                  type: integer
+                  example: 2
+                analogy:
+                  type: string
+                  example: 'Насіння яблука'
+                babySize:
+                  type: number
+                  example: 0.25
+                babyWeight:
+                  type: number
+                  example: 1.2
+                image:
+                  type: string
+                  example: 'https://ftp.goit.study/img/lehlehka/6895ce04a5c677999ed2af25.webp'
+                babyActivity:
+                  type: string
+                  example: 'Серце починає битися'
+                babyDevelopment:
+                  type: string
+                  example: 'На другому тижні вагітності ...'
+                interestingFact:
+                  type: string
+                  example: 'Близько 60% жінок не знають...'
+                momDailyTips:
+                  type: array
+                  items:
                     type: string
-                    example: Successfully fetched baby development data for week 2
-                  data:
-                    type: object
-                    properties:
-                      weekNumber:
-                        type: integer
-                        example: 2
-                      analogy:
-                        type: string
-                        example: 'Насіння яблука'
-                      babySize:
-                        type: number
-                        example: 0.25
-                      babyWeight:
-                        type: number
-                        example: 1.2
-                      image:
-                        type: string
-                        example: 'https://ftp.goit.study/img/lehlehka/6895ce04a5c677999ed2af25.webp'
-                      babyActivity:
-                        type: string
-                        example: 'Серце починає битися'
-                      babyDevelopment:
-                        type: string
-                        example: 'На другому тижні вагітності ...'
-                      interestingFact:
-                        type: string
-                        example: 'Близько 60% жінок не знають...'
-                      momDailyTips:
-                        type: array
-                        items:
-                          type: string
-                        example:
-                          - 'Відпочивайте більше'
-                          - 'Пийте достатньо води'
-          '400':
-          $ref: './swagger/components/responses/400.yaml'
-        '401':
-          $ref: './swagger/components/responses/401.yaml'
-        '404':
-          $ref: './swagger/components/responses/404.yaml'
-        '500':
-          $ref: './swagger/components/responses/500.yaml'
+                  example:
+                    - 'Відпочивайте більше'
+                    - 'Пийте достатньо води'
+    '400':
+    $ref: './swagger/components/responses/400.yaml'
+  '401':
+    $ref: './swagger/components/responses/401.yaml'
+  '404':
+    $ref: './swagger/components/responses/404.yaml'
+  '500':
+    $ref: './swagger/components/responses/500.yaml'
